--- a/libraries/corelib/CMakeLists.txt
+++ b/libraries/corelib/CMakeLists.txt
@@ -6,8 +6,8 @@ file(GLOB_RECURSE CORE_LIB_SOURCES
     "${CMAKE_CURRENT_LIST_DIR}/source/*.cpp"
 )
 
-add_library(coreLib STATIC ${CORE_LIB_SOURCES})
+add_library(coreLibA STATIC ${CORE_LIB_SOURCES})
 
-target_include_directories(coreLib PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include")
+target_include_directories(coreLibA PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include")
 
-target_link_libraries(coreLib PUBLIC utilityLib)
+target_link_libraries(coreLibA PUBLIC utilityLibA)
