--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,17 +3,17 @@ if(BUILD_TESTING)
     # Tests
     file(GLOB_RECURSE unittests "${CMAKE_CURRENT_LIST_DIR}/unittests/*.cxx")
     add_executable(
-    testLib
+    testLibA
     ${unittests}
     )
     target_link_libraries(
-        testLib
+        testLibA
         PUBLIC
-        coreLib
+        coreLibA
         GTest::gtest_main
         GTest::gmock_main
     )
 
     include(GoogleTest)
-    gtest_discover_tests(testLib)
+    gtest_discover_tests(testLibA)
 endif(BUILD_TESTING)
