--- a/libraries/utilitylib/CMakeLists.txt
+++ b/libraries/utilitylib/CMakeLists.txt
@@ -9,3 +9,5 @@ file(GLOB_RECURSE UTILITY_LIB_SOURCES
 add_library(utilityLibA STATIC ${UTILITY_LIB_SOURCES})
 
 target_include_directories(utilityLibA PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include")
+
+target_link_libraries(utilityLibA PUBLIC utilityLibB)
