--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,13 +22,10 @@ add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/applications")
 
 add_subdirectory ("${CMAKE_CURRENT_LIST_DIR}/tests")
 
-set(proja_POPULATED ON)
-set(proja_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-set(proja_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 FetchContent_SetPopulated(
     ProjA
-    SOURCE_DIR ${proja_SOURCE_DIR}
-    BINARY_DIR ${proja_BINARY_DIR}
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
+    BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 include (cmake/IncludeProjB.cmake)
