--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@
 #
 cmake_minimum_required (VERSION 3.24)
 
-project (ProjA)
+project(ProjA
+    VERSION 0.0.0
+)
 
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 17)
